feat: update form field appearances to 'fill' for a consistent UI experience across modals and components

--- a/src/app/features/modals/settings/about-modal/about-modal.component.html
+++ b/src/app/features/modals/settings/about-modal/about-modal.component.html
@@ -233,7 +233,7 @@
                   <span class="setting-title">Release Channel</span>
                 </div>
                 <div class="setting-control">
-                  <mat-form-field appearance="outline">
+                  <mat-form-field appearance="fill">
                     <mat-select
                       [value]="updateChannel"
                       (selectionChange)="changeChannel($event.value)"
@@ -433,7 +433,7 @@
                     <span class="setting-title">Release Channel</span>
                   </div>
                   <div class="setting-control">
-                    <mat-form-field appearance="outline">
+                    <mat-form-field appearance="fill">
                       <mat-select
                         [value]="rcloneUpdateChannel"
                         (selectionChange)="changeRcloneChannel($event.value)"
