--- a/src/app/shared/components/password-manager/password-manager.component.html
+++ b/src/app/shared/components/password-manager/password-manager.component.html
@@ -9,7 +9,7 @@
   <div class="password-form">
     <!-- Enhanced password input field -->
     <div class="password-field-container" [class.shake]="shouldShake">
-      <mat-form-field appearance="outline" class="password-field">
+      <mat-form-field appearance="fill" class="password-field">
         <mat-label>Configuration Password</mat-label>
         <input
           matInput
