--- a/src/app/features/modals/remote-management/remote-config-modal/remote-config-modal.component.html
+++ b/src/app/features/modals/remote-management/remote-config-modal/remote-config-modal.component.html
@@ -77,6 +77,7 @@
             [useInteractiveMode]="useInteractiveMode"
             (remoteTypeChanged)="onRemoteTypeChange()"
             (interactiveModeToggled)="onInteractiveModeToggled($event)"
+            (fieldChanged)="onRemoteFieldChanged($event.fieldName, $event.isChanged)"
           />
         </section>
       }
