--- a/src/app/shared/remote-config/remote-config-step/remote-config-step.component.scss
+++ b/src/app/shared/remote-config/remote-config-step/remote-config-step.component.scss
@@ -29,7 +29,7 @@ form {
   .basic-section {
     display: flex;
     flex-direction: column;
-    gap: var(--space-md);
+    gap: var(--space-xs);
     padding-top: var(--space-lg);
   }
 
