--- a/src/app/shared/remote-config/flag-config-step/flag-config-step.component.html
+++ b/src/app/shared/remote-config/flag-config-step/flag-config-step.component.html
@@ -327,11 +327,7 @@
       @if (field.type === 'dynamic-fields') {
         <ng-container formGroupName="options">
           @for (field of this.dynamicFlagFields; track field.Name) {
-            <app-setting-control
-              [option]="field"
-              [formControlName]="field.Name"
-              (valueChanged)="onFieldChanged(field.Name, $event)"
-            >
+            <app-setting-control [option]="field" [formControlName]="field.Name">
             </app-setting-control>
           }
         </ng-container>
