--- a/src/app/features/modals/settings/rclone-config-modal/rclone-config-modal.component.html
+++ b/src/app/features/modals/settings/rclone-config-modal/rclone-config-modal.component.html
@@ -46,7 +46,7 @@
                 <div class="virtual-scroll-item">
                   <button
                     mat-button
-                    class="config-item"
+                    class="config-item search-result-item"
                     (click)="navigateTo(result.service, result.category, result.option.Name)"
                   >
                     <div class="config-item-content">
