--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -143,7 +143,7 @@
         width: 24px;
         height: 24px;
         border-radius: 50%;
-        transition: all var(--transition-fast);
+        transition: var(--transition-fast);
         background: rgba(var(--app-text-color-rgb), 0.06);
         border: 1.5px solid rgba(var(--app-text-color-rgb), 0.12);
 
