--- a/src/app/features/modals/settings/about-modal/about-modal.component.html
+++ b/src/app/features/modals/settings/about-modal/about-modal.component.html
@@ -3,7 +3,7 @@
     <button>
       <mat-icon></mat-icon>
     </button>
-    <p>About</p>
+    <p style="opacity: 0">About</p>
     <button mat-icon-button (click)="close()" aria-label="Close">
       <mat-icon svgIcon="circle-xmark"></mat-icon>
     </button>
