--- a/src/app/shared/remote-config/flag-config-step/flag-config-step.component.html
+++ b/src/app/shared/remote-config/flag-config-step/flag-config-step.component.html
@@ -65,6 +65,9 @@
       @if (field.type === 'destination' && !isType(['mount', 'vfs', 'filter', 'backend'])) {
         <mat-form-field appearance="fill">
           <mat-label>{{ flagType | titlecase }} Destination</mat-label>
+          @if (pathState[flagType + 'Config.dest']?.remoteName) {
+            <span matPrefix>{{ pathState[flagType + 'Config.dest'].remoteName }}:</span>
+          }
           <input
             matInput
             formControlName="dest"
@@ -152,6 +155,9 @@
       @if (field.type === 'source' && isEditMode && !isType(['vfs', 'filter', 'backend'])) {
         <mat-form-field appearance="fill">
           <mat-label>{{ flagType | titlecase }} Source</mat-label>
+          @if (pathState[flagType + 'Config.source']?.remoteName) {
+            <span matPrefix>{{ pathState[flagType + 'Config.source'].remoteName }}:</span>
+          }
           <input
             matInput
             formControlName="source"
